--- a/125portfolio/app/globals.css
+++ b/125portfolio/app/globals.css
@@ -12,6 +12,10 @@
   --font-mono: var(--font-geist-mono);
 }
 
+* {
+  font-family: 'Afacad', sans-serif;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -23,4 +27,13 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* app/globals.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
 }
